Fixed the center alignment for the pixel figure and the fireworks for different screen sizes.

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,10 +3,26 @@
     width: calc(100vw - 400px);
     display: flex;
     justify-content: center;
-    align-items: center;
     transition: background-color 2s;
+    overflow: hidden;
 }
 
 .main-container_night {
     background-color: #000b16;
+}
+
+app-neon-sign {
+    padding-top: 10%;
+}
+
+@media only screen and (max-width:1900px) {
+    .main-container, .main-container_night {
+        width: calc(100vw - 310px);
+    }
+}
+
+@media only screen and (max-width:1250px) {
+    .main-container, .main-container_night {
+        width: 100vw;
+    }
 }
