--- a/src/app/shared/fireworks/fireworks.component.scss
+++ b/src/app/shared/fireworks/fireworks.component.scss
@@ -27,6 +27,7 @@
   background-size: 0.5vmin 0.5vmin;
   background-repeat: no-repeat;
   animation: fireworkAnimation 2s infinite;
+  overflow: hidden;
 }
 
 .firework1::before {
@@ -44,7 +45,7 @@
   content: "";
   position: absolute;
   top: 20%;
-  left: 70%;
+  left: 75%;
   transform: translate(-50%, -50%);
   width: 0.5vmin;
   aspect-ratio: 1;
@@ -68,6 +69,7 @@
   animation: fireworkAnimation 2s infinite;
   animation-delay: .3s;
   opacity: 0;
+  overflow: hidden;
 }
 
 .firework2::before {
@@ -110,6 +112,7 @@
   animation: fireworkAnimation 2s infinite;
   animation-delay: 1.5s;
   opacity: 0;
+  overflow: hidden;
 }
 
 .firework3::before {
@@ -152,6 +155,7 @@
   animation: fireworkAnimation 2s infinite;
   animation-delay: .5s;
   opacity: 0;
+  overflow: hidden;
 }
 
 .firework4::before {
@@ -170,7 +174,7 @@
   content: "";
   position: absolute;
   top: 20%;
-  left: 60%;
+  left: 30%;
   transform: translate(-50%, -50%);
   width: 0.5vmin;
   aspect-ratio: 1;
@@ -194,6 +198,7 @@
   animation: fireworkAnimation 2s infinite;
   animation-delay: 1s;
   opacity: 0;
+  overflow: hidden;
 }
 
 .firework5::before {
